--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "app-metadata",
-  "version": "0.1.1",
+  "version": "0.1.3",
   "description": "This library provides functionality to extract IPA, APK and UWP packages.",
   "main": "./index.js",
   "repository": {
@@ -12,7 +12,6 @@
     "bluebird": "^3.5.0",
     "decompress-zip": "^0.3.0",
     "extract-zip": "^1.6.5",
-    "fs": "0.0.1-security",
     "fs-extra": "^5.0.0",
     "md5-file": "^3.1.1",
     "node-apk-parser": "^0.2.3",
@@ -27,16 +26,14 @@
   },
   "devDependencies": {
     "@types/should": "^8.3.0",
+    "@types/sinon": "^4.1.2",
     "dts-bundle": "^0.4.3",
     "glob": "^7.1.1",
     "gulp": "^3.9.1",
-    "gulp-istanbul": "^1.1.1",
     "gulp-mocha": "^3.0.1",
     "gulp-nodemon": "^2.2.1",
-    "gulp-remove-files": "0.0.3",
     "gulp-sequence": "^0.4.5",
     "gulp-sourcemaps": "^2.6.0",
-    "gulp-tslint": "^5.0.0",
     "gulp-typescript": "^3.1.7",
     "gulp-typings": "^2.0.4",
     "gulp-util": "^3.0.7",
@@ -48,7 +45,6 @@
     "rmdir": "^1.2.0",
     "should": "^8.3.1",
     "sinon": "^1.17.4",
-    "supertest": "^1.0.0",
     "testdouble": "^2.1.2",
     "through2": "2.0.0",
     "tslint": "^3.11.0",
