--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -9,6 +9,22 @@
     "version": "0.2.0",
     "configurations":  [
 		{
+			"name": "publish",
+			"type": "node",
+			"protocol": "inspector",
+			"request": "launch",
+			"program": "${workspaceRoot}/node_modules/gulp/bin/gulp.js",
+			"stopOnEntry": false,
+			"sourceMaps": true,
+			"args": [
+					"publish"
+			],
+			"runtimeArgs": [
+					"--nolazy"
+			],            
+			"cwd": "${workspaceRoot}"
+		},
+		{
 				"name": "Test",
 				"type": "node",
 				"protocol": "inspector",
