--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "gulp-typescript": "^3.1.7",
     "gulp-typings": "^2.0.4",
     "gulp-util": "^3.0.7",
+    "gulp-clean": "0.3.2",
     "merge2": "^1.0.2",
     "mocha": "^3.1.2",
     "npm": "^3.9.6",
