--- a/package.json
+++ b/package.json
@@ -27,6 +27,8 @@
   "devDependencies": {
     "@types/should": "^8.3.0",
     "@types/sinon": "^4.1.2",
+    "copy-dir": "^0.3.0",
+    "del": "^3.0.0",
     "dts-bundle": "^0.4.3",
     "glob": "^7.1.1",
     "gulp": "^3.9.1",
@@ -37,13 +39,13 @@
     "gulp-typescript": "^3.1.7",
     "gulp-typings": "^2.0.4",
     "gulp-util": "^3.0.7",
-    "gulp-clean": "0.3.2",
     "merge2": "^1.0.2",
     "mocha": "^3.1.2",
     "npm": "^3.9.6",
     "provisioning": "1.5.0",
     "request": "^2.58.0",
     "rmdir": "^1.2.0",
+    "shortid": "2.2.8",
     "should": "^8.3.1",
     "sinon": "^1.17.4",
     "testdouble": "^2.1.2",
